--- a/pom.xml
+++ b/pom.xml
@@ -27,21 +27,21 @@
 
 <!-- AGGIUNTO VALIDATION -->
 <!-- Bean Validation (JSR-303) -->
-     <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId>
-       <version>2.0.1.Final</version>
-     <!--   <scope>provided</scope> -->
-     </dependency>
-     <!-- Bean Validation Implementation -->
-     <!-- Provides portable constraints such as @NotEmpty, @Email and @Url -->
-     <!-- Hibernate Validator is only the JSR-303 implementation at the moment, so we can assume it's provided -->
-     <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator</artifactId>
-        <version>4.0.0.GA</version>
-     <!--   <scope>provided</scope> -->
-     </dependency>
+<dependency>
+  <groupId>org.hibernate.validator</groupId>
+  <artifactId>hibernate-validator</artifactId>
+  <version>6.0.2.Final</version>
+</dependency>
+<dependency>
+  <groupId>org.hibernate.validator</groupId>
+  <artifactId>hibernate-validator-annotation-processor</artifactId>
+  <version>6.0.2.Final</version>
+</dependency>
+<dependency>
+  <groupId>javax.validation</groupId>
+  <artifactId>validation-api</artifactId>
+  <version>2.0.0.Final</version>
+</dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -78,6 +78,18 @@
                   <artifactId>standard</artifactId>
                   <version>1.1.2</version>
             </dependency>
+
+            <dependency>
+                  <groupId>javax.el</groupId>
+                  <artifactId>javax.el-api</artifactId>
+                  <version>3.0.0</version>
+                </dependency>
+                <dependency>
+                  <groupId>org.glassfish.web</groupId>
+                  <artifactId>javax.el</artifactId>
+                  <version>2.2.6</version>
+                </dependency>
+
     </dependencies>
     </profile>
   </profiles>
